12-Oct-2003
-Fixed a bug in iXY classes.
-Added note about black screen to readme
-fixed bug where MiniMapView was drawing outside it's view space, leading to
 crashes.
-add signal handlers to make it abort more nicely in error case (don't stay in
 mouse/keyboard grab mode)

11-Oct-2003 by Matthias Braun
-added a release script

05-Oct-2003 by Matthias Braun
-did some more code cleanup. all the Rect and XY classes cleaned up a bit and
 finally removed the codewiz.hpp file.

04-Oct-2003 by Matthias Braun
-rewrote the config system and completed config saving and loading
-fixed bug where minimap could be moved outside screen

02-Oct-2003 by Matthias Braun
-did refactoring work on the surface/DDHardSurface interfaces. DDHardSurface is
 now called ScreenSurface, and is used in 99% of all cases where we need to
 access video memory.
-screen is defined in ScreenSurface.hpp now. Consequently no code in the Lib
 subdir has the ability to know details about the screen which makes the
 separation alot cleaner.
-Removed some unused code
    
24-Sep-2003 by Matthias Braun
-converted lots of code to use physfs (not completely done yet)
-removed the automake system
-added a jam build system
-added README

23-Sep-2003 by Ivo Danihelka
-Added bots, press 'b' for enable

22-Sep-2003 by Matthias Braun
-Commited automake stuff from Ivo and merged his autoconf script with mine
-small cleanups/compile fixes
-fixed all warnings (and did some smaller cleanups again)

21-Sep-2003 by Ivo Danihelka
-solved the higher resolutions problem in MainMenu
-load/save GameConfig in XML format

18-Sep-2003 by Matthias Braun
-fixed the Choice-reset problem
-removed lots of options from visualsview
-changed sound back to 8 channels at 22k, no need to blow too much resources
 away...

16-Sep-2003 by Matthias Braun
-randomly fixed stuff in the very ugly libview code (also removed several unused
 files there)
-added a statechangedcallback to Choice and CheckBox components